--- a/naturecoast-website/how-it-works.html
+++ b/naturecoast-website/how-it-works.html
@@ -50,10 +50,6 @@
                     </ul>
                 </nav>
 
-                <div class="auth-section">
-                    <a href="#" class="login-btn">Log In</a>
-                </div>
-
                 <!-- Mobile Menu Toggle -->
                 <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">
                     <span></span>
@@ -70,7 +66,6 @@
             <li><a href="index.html">HOME</a></li>
             <li><a href="how-it-works.html" class="active">HOW IT WORKS</a></li>
             <li><a href="contact.html">CONTACT US</a></li>
-            <li class="mobile-login"><a href="#">Log In</a></li>
         </ul>
     </nav>
 
@@ -78,7 +73,6 @@
     <section class="page-header">
         <div class="container">
             <h1>How it Works!</h1>
-            <a href="#member-access" class="btn btn-primary">Request Member Access</a>
         </div>
     </section>
 
@@ -174,7 +168,7 @@
             </div>
 
             <div class="cta-section">
-                <a href="#member-access" class="btn btn-primary btn-large">Request Member Access</a>
+                <a href="shop.html" class="btn btn-primary btn-large">Shop Now</a>
             </div>
         </div>
     </section>
