Updates to website

--- a/naturecoast-website/index.html
+++ b/naturecoast-website/index.html
@@ -45,6 +45,7 @@
                 <nav class="main-nav desktop-nav">
                     <ul>
                         <li><a href="index.html" class="active">HOME</a></li>
+                        <li><a href="shop.html">SHOP</a></li>
                         <li><a href="how-it-works.html">HOW IT WORKS</a></li>
                         <li><a href="contact.html">CONTACT US</a></li>
                     </ul>
@@ -64,6 +65,7 @@
     <nav class="mobile-nav" id="mobileNav">
         <ul>
             <li><a href="index.html" class="active">HOME</a></li>
+            <li><a href="shop.html">SHOP</a></li>
             <li><a href="how-it-works.html">HOW IT WORKS</a></li>
             <li><a href="contact.html">CONTACT US</a></li>
         </ul>
