--- a/naturecoast-website/shop.html
+++ b/naturecoast-website/shop.html
@@ -202,6 +202,7 @@
                 <div class="footer-column">
                     <h3>Nature Coast Solutions</h3>
                     <p>A Research Community You Can Trust</p>
+                    <img src="assets/logo.png" alt="Nature Coast Solutions" class="footer-logo">
                 </div>
 
                 <div class="footer-column">
