updating more logo areas.

--- a/naturecoast-website/how-it-works.html
+++ b/naturecoast-website/how-it-works.html
@@ -87,7 +87,7 @@
                     <p>Nature Coast Solutions is a private research hub and wellness community offering access to Education Tools, Protocol References, and Third-Party Tested Research Compounds designed to support independent exploration of peptide science.</p>
                 </div>
                 <div class="intro-image">
-                    <img src="assets/research-image.png" alt="Research Lab">
+                    <img src="assets/logo.png" alt="Nature Coast Solutions" class="how-it-works-logo">
                 </div>
             </div>
 
