--- a/naturecoast-website/index.html
+++ b/naturecoast-website/index.html
@@ -74,7 +74,7 @@
     <!-- Hero Section -->
     <section class="hero-section">
         <div class="hero-background">
-            <img src="assets/lab-bg.jpg" alt="Laboratory Background">
+            <img src="assets/scientist.png" alt="Laboratory Background">
             <div class="hero-overlay"></div>
         </div>
 
