removing errant bits.

--- a/naturecoast-website/index.html
+++ b/naturecoast-website/index.html
@@ -81,10 +81,10 @@
         <div class="hero-content">
             <h1>NATURE COAST SOLUTIONS</h1>
             <p class="hero-tagline">SCIENCE YOU CAN SEE. RESEARCH YOU CAN TRUST.</p>
-
+<!-- 
             <div class="hero-image">
                 <img src="assets/hero-image.png" alt="Research Products">
-            </div>
+            </div> -->
 
             <div class="hero-buttons">
                 <a href="shop.html" class="btn btn-accent">Shop Now</a>
