--- a/naturecoast-website/index.html
+++ b/naturecoast-website/index.html
@@ -101,7 +101,21 @@
             </div>
 
             <div class="disclaimer">
-                <p>OUR PRODUCTS ARE NOT DIETARY SUPPLEMENTS OR MEDICATIONS</p>
+                <p>Nature CoastSolutions <br>
+                    <br>NATURE COAST SOLUTIONS GB 10/5-10/13 
+                    <br>■  At Your Own Risk – Joining is completely voluntary. Each participant assumes their own risk when placing an order.
+                    <br>■  Nature Coast Solutions is only acting as a middle person between buyers and the manufacturers.
+                    <br>■  No Refunds – All sales are final. Once orders are placed and funds are collected, refunds cannot be issued.   
+                    <br>■  Vendor Reliability – We do our best to research and choose reliable vendors, but this market can change quickly. Please understand that there’s always a level of uncertainty. 
+                    <br>■ The order is not completed until the payment is made. Once products are received, they are shipped to the buyer within 48 hrs. 
+                    <br>■ Responsibility will only be assumed if there is a mistake on our end — such as providing an incorrect shipping address.        
+                    <br>
+                    <br><b>NO PAYMENTS ARE TO BE SENT FOR GOODS AND SERVICES. THIS INCLUDES ALL PAYMENT METHODS                      </b>
+                    <br>ZELLE & CHIME: <u>813-539-0241</u>
+                    <br>CASHAPP: <u>$aprilbane</u> 
+                    <br>Venmo: <u>@April-Bane-1</u>
+                    <br>BTC: <u>bc1qwypjpywqy3ar6wed7n87v0xl0nz0t9fu5gakt5</u>
+                    </p>
             </div>
         </div>
     </section>
