updating logic surrounding shipping

--- a/naturecoast-website/shop.html
+++ b/naturecoast-website/shop.html
@@ -133,10 +133,10 @@
 
             <div class="product-listing-wrapper">
                 <div class="category-tabs">
-                    <button class="category-tab active" onclick="filterProducts('all')">All Products</button>
-                    <button class="category-tab" onclick="filterProducts('singles')">Singles</button>
-                    <button class="category-tab" onclick="filterProducts('kits')">Kits</button>
-                    <button class="category-tab" onclick="filterProducts('supplies')">Supplies</button>
+                    <button class="category-tab active" onclick="filterProducts('all', event)">All Products</button>
+                    <button class="category-tab" onclick="filterProducts('singles', event)">Singles</button>
+                    <button class="category-tab" onclick="filterProducts('kits', event)">Kits</button>
+                    <button class="category-tab" onclick="filterProducts('supplies', event)">Supplies</button>
                 </div>
 
                 <!-- Products Grid -->
