Updating note regarding shipment of kits.

--- a/naturecoast-website/shop.html
+++ b/naturecoast-website/shop.html
@@ -158,7 +158,7 @@
                 <span class="close-modal" onclick="closeOrderModal()">&times;</span>
             </div>
             <div class="modal-body">
-                <h3>The following information will be emailed:</h3>
+                <h3>Please confirm the following order:</h3>
 
                 <div class="order-details-section">
                     <h4>Customer Information:</h4>
@@ -167,6 +167,7 @@
 
                 <div class="order-details-section">
                     <h4>Order Items:</h4>
+                    <h4 style="color: red;"><b>Please Note: </b><i>Kits can take up to four (4) weeks to ship!</i></h4>
                     <div id="modalOrderItems"></div>
                 </div>
 
