quick update surrounding name in the payment section.

--- a/naturecoast-website/shop.html
+++ b/naturecoast-website/shop.html
@@ -178,6 +178,7 @@
 
                 <div class="order-details-section">
                     <h4>Payment Instructions:</h4>
+                    <h4 style="color: red;"><b>Please Note: </b><i>When sending payment, please <u>ONLY</u> include your first and last name in the notes on the payment.</i></h4>
                     <p>Please send payment to one of the following:</p>
                     <ul>
                         <li><strong>ZELLE:</strong> carlaprilbane@yahoo.com</li>
