--- a/naturecoast-website/index.html
+++ b/naturecoast-website/index.html
@@ -102,7 +102,7 @@
                 <h4 style="color: red;"><b>Please Note: </b><i>Kits can take up to four (4) weeks to ship!</i></h4>
                 <br />
                 <p>Nature Coast Solutions <br>
-                    <br>NATURE COAST SOLUTIONS GB 10/5-10/13 
+                    <br>NATURE COAST SOLUTIONS GB FOR OCTOBER 
                     <br>■  At Your Own Risk – Joining is completely voluntary. Each participant assumes their own risk when placing an order.
                     <br>■  Nature Coast Solutions is only acting as a middle person between buyers and the manufacturers.
                     <br>■  No Refunds – All sales are final. Once orders are placed and funds are collected, refunds cannot be issued.   
