--- a/naturecoast-website/shop.html
+++ b/naturecoast-website/shop.html
@@ -12,7 +12,10 @@
 
     <title>SHOP | Nature Coast Solutions</title>
 
-    <!-- Favicon -->
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="assets/favicon.png">
 
     <!-- Styles -->
